@@ -1,6 +1,10 @@
 2012-05-30  H.J. Lu  <hongjiu.lu@intel.com>
 
 	[BZ #14117]
+	* sysdeps/i386/bits/select.h: Removed.
+	* sysdeps/x86_64/bits/select.h: Renamed to ...
+	* sysdeps/x86/bits/select.h: This.
+
 	* sysdeps/i386/bits/setjmp.h: Removed.
 	* sysdeps/x86_64/bits/setjmp.h: Renamed to ...
 	* sysdeps/x86/bits/setjmp.h: This.
